--- a/module/inicio/view/inicio.html
+++ b/module/inicio/view/inicio.html
@@ -89,10 +89,28 @@
 
 
 
+  <!-- Listar categorias mas visitadas -->
+    <div class="single-slider ptb-1500 bg-opacity">
+			<div class="container">
+					<div class="slider-text text-center">
+						<h1 class="cd-headline clip is-full-width">
+							<span>Tipo de habitaciones más visitadas</span>
+						</h1>
+					</div>					
+				</div>
+      </div>
+
+  <div class="contenedor">
+    <div id="mas"></div>
+    <div class="visitas_home"></div>
+  </div>
+<!-- Fin cagegorias mas visitadas -->
 
 
 
 
+
+<!-- No hacer caso a lo de abajo -->
 
 
     <style>
