--- a/module/shop/view/shop.html
+++ b/module/shop/view/shop.html
@@ -17,9 +17,12 @@
 						</div>					
 					</div>
 		</div>
-	<div id="articulo" class="tipos"></div>
+	<div id="articulo" class="tipos"><div id="mas"></div></div>
+
 	<div class="filters_container"></div>
+	
 	<div id="boton_map"></div>
+	
 	
 		<div class="spiner"></div>
 
@@ -31,6 +34,7 @@
 		<div id="map"></div>
 
 	<!-- Fin maps -->
+	
 
 </div>
 <div id="map"></div>
