--- a/view/smoth-corporate-html-template/smoth/style.css
+++ b/view/smoth-corporate-html-template/smoth/style.css
@@ -289,6 +289,31 @@ h6 a {
   border-width: 15px;
   border-style: groove;
 }
+#mas{
+  /* float: center; */
+  width: 100px;
+  height: 100px;
+  border-width:5px;
+  border-style:solid;
+  background-image: url("view/img/plus.png");
+}
+
+#Ciudad{
+  float: left;
+}
+#Tipo{
+  float: left;
+}
+.autocomplete{
+  float: left;
+}
+#optionsauto{
+  float:center;
+  z-index: 10;
+}
+#autocom{
+  height:52px;;
+}
 
 
 .filters_container{
@@ -314,7 +339,7 @@ h6 a {
   border-width:5px;
   border-style:solid;
   border-color:rgb(26, 110, 146);
-  /* background-image:url("view/img/gm.png"); */
+  background-image:url("view/img/gm.png");
   /* visibility: hidden; */
 }
 
@@ -351,6 +376,50 @@ h6 a {
   padding-left: 10%;
   padding-right: 10%;
   padding-bottom: 10%; */
+}
+
+
+.texto_visitas{
+  z-index:6;
+  text-align: end;
+  align-content: center;
+  position: relative;
+  background-color:transparent;
+  margin-top: 0;
+  margin-left: 60px;
+  margin-bottom: 500px;
+  height: 100px;
+  width: 100px;
+
+  position: absolute;
+  font-size: 50px;
+  font-style: italic;
+  -webkit-text-stroke: 1px black;
+  color: white; 
+  padding-left: 1%;
+  padding-top: 140px;
+}
+
+.texto_ojo{
+  z-index:6;
+  text-align: end;
+  align-content: center;
+  position: relative;
+  background-color:transparent;
+  margin-top: 0;
+  margin-left: 60px;
+  margin-bottom: 500px;
+  height: 100px;
+  width: 100px;
+
+  position: absolute;
+  font-size: 50px;
+  font-style: italic;
+  -webkit-text-stroke: 1px black;
+  color: white; 
+  padding-left: 1%;
+  padding-top: 140px;
+  background-image: url("view/img/eye.png");
 }
 .texto_valoracion{
   z-index: 9;
@@ -417,7 +486,7 @@ h6 a {
   text-align: center;
   /* align-self: center; */
 }
-.categoria,.ciudad_home{
+.categoria,.ciudad_home,.categoria_visitas{
   padding: 5px 10px 5px 10px;
   margin: 2px;
   display:inline-block;
@@ -425,12 +494,12 @@ h6 a {
   height: 240px; */
   text-align: center;
 }
-.imagen_ciudad_home{
+.imagen_ciudad_home,.imagen_categoria_visitas{
     height: 250px;
     width: 500px;
 }
 
-.categoria:hover,.ciudad_home:hover{
+.categoria:hover,.ciudad_home:hover,.categoria_visitas:hover{
   cursor: pointer;
   /* height: 560px;
   width: 560px; */
