--- a/module/inicio/view/inicio.html
+++ b/module/inicio/view/inicio.html
@@ -108,6 +108,32 @@
 
 
 
+<!-- Datos del API -->
+<div class="single-slider ptb-1500 bg-opacity">
+  <div class="container">
+      <div class="slider-text text-center">
+        <h1 class="cd-headline clip is-full-width">
+          <span>Libros</span>
+        </h1>
+      </div>					
+    </div>
+  </div>
+
+  <div id="libros"></div>
+
+
+
+<!-- Fin datos de API -->
+
+
+
+
+
+
+
+
+
+
 
 
 <!-- No hacer caso a lo de abajo -->
