--- a/view/smoth-corporate-html-template/smoth/style.css
+++ b/view/smoth-corporate-html-template/smoth/style.css
@@ -383,6 +383,44 @@ h6 a {
   /* margin-left:100%; */
   /* padding-right:0%; */
 }
+
+.shop_item{
+  z-index:10;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  align-content: center;
+  position: absolute;
+  background-color:rgb(62, 182, 212);
+  background-image: url("view/img/cart.png");
+  margin-top: 165px;
+  margin-left: 300px;
+  margin-bottom: 0px;
+  border-bottom-right-radius: 25px;
+}
+.shop_item:hover{
+  cursor: pointer;
+  /* background-color:rgba(1, 89, 161, 0.562); */
+  box-shadow:5px 5px 40px 10px rgb(1, 89, 161);
+
+}
+
+.add_cart{
+  background-color:rgb(62, 212, 119);
+}
+
+.shop_cart{
+  height: 50px;
+  width: 50px;
+  float: right;
+  background-image: url("view/img/cart.png");
+}
+
+.shop_cart:hover{
+  cursor: pointer;
+  box-shadow:5px 5px 40px 10px rgb(1, 89, 161);
+}
+
 .texto_imagen{
   z-index:5;
   text-align: center;
