Carrito. PD: Se me ha olvidado hacer comits 2 dias

--- a/module/cart/view/cart.html
+++ b/module/cart/view/cart.html
@@ -1,2 +1,7 @@
 <h1>CESTA</h1>
-<div>Productos:</div>
+<!-- <div>Productos:</div> -->
+<div id="check_out">CHEK OUT</div>
+<fieldset>
+    <legend>Productos</legend>
+    <div id="contenedor_cesta"></div>
+</fieldset>
