--- a/view/smoth-corporate-html-template/smoth/style.css
+++ b/view/smoth-corporate-html-template/smoth/style.css
@@ -391,7 +391,6 @@ h6 a {
   text-align: center;
   align-content: center;
   position: absolute;
-  background-color:rgb(62, 182, 212);
   background-image: url("view/img/cart.png");
   margin-top: 165px;
   margin-left: 300px;
@@ -404,6 +403,33 @@ h6 a {
   box-shadow:5px 5px 40px 10px rgb(1, 89, 161);
 
 }
+.active_cart{
+  z-index:10;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  align-content: center;
+  position: absolute;
+  background-image: url("view/img/cart.png");
+  margin-top: 165px;
+  margin-left: 300px;
+  margin-bottom: 0px;
+  border-bottom-right-radius: 25px;
+  background-color:rgb(62, 212, 119);
+}
+.shop_item{
+  background-color:rgb(62, 182, 212);
+}
+
+.foto_cart{
+  width: 100px;
+  height: 100px;
+}
+
+
+
+
+
 
 .add_cart{
   background-color:rgb(62, 212, 119);
