Carrito con delete y casi control de cantidad

--- a/module/cart/view/cart.html
+++ b/module/cart/view/cart.html
@@ -1,6 +1,6 @@
 <h1>CESTA</h1>
 <!-- <div>Productos:</div> -->
-<div id="check_out">CHEK OUT</div>
+<div id="check_out"></div>
 <fieldset>
     <legend>Productos</legend>
     <div id="contenedor_cesta"></div>
