Insert en bd de la compra

--- a/module/cart/view/cart.html
+++ b/module/cart/view/cart.html
@@ -1,3 +1,4 @@
+<div id="carrito">
 <h1>CESTA</h1>
 <!-- <div>Productos:</div> -->
 <div id="check_out"></div>
@@ -5,3 +6,4 @@
     <legend>Productos</legend>
     <div id="contenedor_cesta"></div>
 </fieldset>
+</div>
